--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "concurrently": "^7.4.0",
     "config": "^3.3.7",
     "express": "^4.18.1",
@@ -18,7 +19,9 @@
   "devDependencies": {},
   "scripts": {
     "start": "node server",
-    "server": "index"
+    "server": "nodemon index",
+    "client":"npm start --prefix client",
+    "dev":"concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC"
